# cs599-project

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: fake_mcp_config.json  fake_mcp_server.py
examples/skills/hello-skill/: SKILL.md  skill.json
prompts/: memory_full_refactor_plan.md
src/xcode_cli/: main.py  paths.py
src/xcode_cli/core/: agent.py  agent_types.py  bootstrap.py  config.py  context.py  dashboard.py  external_turn.py  llm.py  memory.py  permissions.py  planning.py  project_root.py  prompting.py  runtime_status.py  session.py  session_resume.py  sub_agent.py  task_tracker.py  tool_registry.py  (+1 more)
tests/: test_agent_env.py  test_agent_memory_bug.py  test_agent_memory_command.py  test_agent_memory_permissions.py  test_agent_resume_command.py  test_agent_tool_loop.py  test_agent_user_turn.py  test_compaction.py  test_config.py  test_context.py  test_env_dashboard.py  test_external_turn.py  test_init_command.py  test_llm.py  test_mcp_agent_integration.py  test_mcp_catalog.py  test_mcp_command.py  test_mcp_config.py  test_mcp_connection.py  test_mcp_dynamic_refresh.py  test_mcp_management_command.py  test_mcp_naming_schema.py  test_mcp_result.py  test_mcp_state.py  test_mcp_tools.py  test_mcp_trust.py  test_memory.py  test_model_invocable_skill_flow.py  test_prompting_memory.py  test_prompting_skills.py  test_qqchat_auth.py  test_qqchat_config.py  test_qqchat_events.py  test_qqchat_gateway.py  test_qqchat_message_client.py  test_qqchat_service.py  test_resume.py  test_runtime_status.py  test_search.py  test_session.py  (+18 more)
(+46 files in other folders)
